--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^7.3.0",
+    "@react-native-firebase/auth": "^8.0.7",
+    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.5.1",
+    "firebase": "^7.15.4",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-countdown-component": "^2.7.1",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-safe-area-context": "^3.0.6",
+    "react-native-screens": "^2.9.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "@babel/core": "7.8.7",
-    "@babel/runtime": "7.8.7",
+    "@babel/core": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
     "@react-native-community/eslint-config": "0.0.5",
     "babel-jest": "24.9.0",
     "eslint": "6.8.0",
