--- a/package.json
+++ b/package.json
@@ -13,17 +13,26 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^7.3.0",
     "@react-native-firebase/auth": "^8.0.7",
-    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/bottom-tabs": "^5.6.1",
+    "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.5.1",
     "firebase": "^7.15.4",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-countdown-component": "^2.7.1",
+    "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.6",
     "react-native-screens": "^2.9.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.4.0",
+    "react-navigation-stack": "^2.8.2",
+    "react-navigation-tabs": "^2.9.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
